--- a/01_extract_RAW.ipynb
+++ b/01_extract_RAW.ipynb
@@ -10,19 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "9a360a8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import findspark\n",
-    "findspark.init()\n",
-    "import pyspark"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 111,
    "id": "09e3263b",
    "metadata": {},
    "outputs": [],
@@ -43,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 112,
    "id": "3985115a",
    "metadata": {},
    "outputs": [],
@@ -64,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 113,
    "id": "47e00fda",
    "metadata": {},
    "outputs": [],
@@ -75,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 114,
    "id": "47c41dc2",
    "metadata": {},
    "outputs": [
@@ -98,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 115,
    "id": "d8fc49fe",
    "metadata": {},
    "outputs": [
@@ -115,7 +103,7 @@
        "51091268"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 116,
    "id": "d3634244",
    "metadata": {},
    "outputs": [
@@ -137,7 +125,7 @@
        "StructType(List(StructField(_c0,IntegerType,true),StructField(_c1,IntegerType,true),StructField(_c2,IntegerType,true),StructField(_c3,IntegerType,true),StructField(_c4,StringType,true),StructField(_c5,StringType,true),StructField(_c6,IntegerType,true),StructField(_c7,IntegerType,true),StructField(_c8,StringType,true),StructField(_c9,IntegerType,true),StructField(_c10,IntegerType,true),StructField(_c11,StringType,true),StructField(_c12,StringType,true),StructField(_c13,StringType,true),StructField(_c14,StringType,true),StructField(_c15,StringType,true),StructField(_c16,StringType,true),StructField(_c17,StringType,true),StructField(_c18,StringType,true),StructField(_c19,StringType,true),StructField(_c20,StringType,true),StructField(_c21,StringType,true),StructField(_c22,StringType,true),StructField(_c23,StringType,true),StructField(_c24,StringType,true),StructField(_c25,StringType,true),StructField(_c26,StringType,true),StructField(_c27,StringType,true),StructField(_c28,StringType,true),StructField(_c29,StringType,true)))"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 117,
    "id": "aadb05dd",
    "metadata": {},
    "outputs": [
@@ -189,7 +177,7 @@
        " '_c29']"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 118,
    "id": "c41ef1cb",
    "metadata": {},
    "outputs": [],
@@ -248,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 119,
    "id": "b9154d13",
    "metadata": {},
    "outputs": [
@@ -287,7 +275,7 @@
        " 'dt_sit_esp']"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 120,
    "id": "f722d05c",
    "metadata": {},
    "outputs": [],
@@ -325,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 121,
    "id": "4e5b1a64",
    "metadata": {},
    "outputs": [
@@ -335,13 +323,41 @@
        "StructType(List(StructField(CNPJ_basico,IntegerType,true),StructField(id_matriz_filial,IntegerType,true),StructField(nome_fantasia,StringType,true),StructField(sit_cad,StringType,true),StructField(dt_cad,IntegerType,true),StructField(mt_sit_cad,IntegerType,true),StructField(dt_inicio_at,IntegerType,true),StructField(cnae_principal,StringType,true),StructField(cnae_secundario,StringType,true),StructField(tp_log,StringType,true),StructField(log,StringType,true),StructField(nm,StringType,true),StructField(comp,StringType,true),StructField(bairro,StringType,true),StructField(CEP,StringType,true),StructField(UF,StringType,true),StructField(municipio,StringType,true)))"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_select.schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "95bcb823",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+----------------+--------------------+-------+--------+----------+------------+--------------+---------------+-------+--------------------+---+--------------------+----------------+--------+---+---------+\n",
+      "|CNPJ_basico|id_matriz_filial|       nome_fantasia|sit_cad|  dt_cad|mt_sit_cad|dt_inicio_at|cnae_principal|cnae_secundario| tp_log|                 log| nm|                comp|          bairro|     CEP| UF|municipio|\n",
+      "+-----------+----------------+--------------------+-------+--------+----------+------------+--------------+---------------+-------+--------------------+---+--------------------+----------------+--------+---+---------+\n",
+      "|   11124181|               1|        WOG MADEIRAS|     04|20181017|        63|    20090908|       4744002|        4671100|    RUA| 10 CHACARA 148 LOTE| 06|LOJA  01         ...|      TAGUATINGA|72110800| DF|     9701|\n",
+      "|   11124191|               1|            PRN RUAS|     04|20190328|        63|    20090909|       4930201|           null|AVENIDA|AVENIDA EUCLIDES ...| SN|  LOTE  34 QUADRA 34|   VILA SAO JOAO|25570162| RJ|     5901|\n",
+      "|    2180764|               2|                null|     08|20151208|         1|    20090909|       4784900|           null|    RUA|ROMARIO DE AZERED...| 50|       LOTE  18 QD H|    MANGUEIRINHA|28800000| RJ|     5885|\n",
+      "|   11124219|               1|   LAVA JATO ALIANCA|     08|20170511|         1|    20090908|       4520005|           null| QUADRA| SHCS SQ 107 BLOCO A|S/N|      PAG        ...|         ASA SUL|70346500| DF|     9701|\n",
+      "|   11124231|               1|VIVARTE EVENTOS E...|     04|20210226|        63|    20090903|       8230001|           null|    RUA|PROFESSOR ANIBAL ...| 64|                null|JARDIM SAO JORGE|04432060| SP|     7107|\n",
+      "+-----------+----------------+--------------------+-------+--------+----------+------------+--------------+---------------+-------+--------------------+---+--------------------+----------------+--------+---+---------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_select.show(5)"
    ]
   },
   {
@@ -354,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 123,
    "id": "2a407e53",
    "metadata": {},
    "outputs": [
@@ -372,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 124,
    "id": "553b2028",
    "metadata": {},
    "outputs": [],
