--- a/01_extract_RAW.ipynb
+++ b/01_extract_RAW.ipynb
@@ -11,6 +11,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "41cbed14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import findspark\n",
+    "findspark.init()\n",
+    "import pyspark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "09e3263b",
    "metadata": {},
    "outputs": [],
@@ -31,15 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3985115a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark = SparkSession.builder.master(\"local\").\\\n",
-    "    appName(\"CNPJ_RAW\").\\\n",
-    "        config(\"spark.executer.memory\",\"1gb\").\\\n",
-    "            getOrCreate()"
+    "spark = SparkSession.builder.appName('extract_RAW')\\\n",
+    "    .config('spark.master','local')\\\n",
+    "        .config('spark.executor.memory','2gb')\\\n",
+    "            .config('spark.shuffle.sql.partitions',2)\\\n",
+    "                .getOrCreate()"
    ]
   },
   {
@@ -52,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "47e00fda",
    "metadata": {},
    "outputs": [],
@@ -63,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "47c41dc2",
    "metadata": {},
    "outputs": [
@@ -86,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d8fc49fe",
    "metadata": {},
    "outputs": [
@@ -103,7 +116,7 @@
        "51091268"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d3634244",
    "metadata": {},
    "outputs": [
@@ -125,7 +138,7 @@
        "StructType(List(StructField(_c0,IntegerType,true),StructField(_c1,IntegerType,true),StructField(_c2,IntegerType,true),StructField(_c3,IntegerType,true),StructField(_c4,StringType,true),StructField(_c5,StringType,true),StructField(_c6,IntegerType,true),StructField(_c7,IntegerType,true),StructField(_c8,StringType,true),StructField(_c9,IntegerType,true),StructField(_c10,IntegerType,true),StructField(_c11,StringType,true),StructField(_c12,StringType,true),StructField(_c13,StringType,true),StructField(_c14,StringType,true),StructField(_c15,StringType,true),StructField(_c16,StringType,true),StructField(_c17,StringType,true),StructField(_c18,StringType,true),StructField(_c19,StringType,true),StructField(_c20,StringType,true),StructField(_c21,StringType,true),StructField(_c22,StringType,true),StructField(_c23,StringType,true),StructField(_c24,StringType,true),StructField(_c25,StringType,true),StructField(_c26,StringType,true),StructField(_c27,StringType,true),StructField(_c28,StringType,true),StructField(_c29,StringType,true)))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "aadb05dd",
    "metadata": {},
    "outputs": [
@@ -177,7 +190,7 @@
        " '_c29']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "c41ef1cb",
    "metadata": {},
    "outputs": [],
@@ -236,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b9154d13",
    "metadata": {},
    "outputs": [
@@ -275,7 +288,7 @@
        " 'dt_sit_esp']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
