--- a/01_extract_RAW.ipynb
+++ b/01_extract_RAW.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "41cbed14",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "09e3263b",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,8 @@
    "outputs": [],
    "source": [
     "# Nesta pasta temos todos os arquivos brutos, da forma que vieram do site da RFB.\n",
-    "path = \"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/01.RAW/*.csv\""
+    "path = \"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/01.RAW/*.csv\"\n",
+    "path_windows = r\"D:\\PRJ_CNPJ\\new_data\\ETL\\01.RAW\\*.csv\""
    ]
   },
   {
@@ -79,22 +80,14 @@
    "execution_count": 6,
    "id": "47c41dc2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_to_DF = spark.read.format(\"csv\")\\\n",
     "    .option(\"delimiter\",\";\")\\\n",
     "        .option(\"enconding\",\"ISO-8859-1\")\\\n",
     "            .option(\"header\",\"False\")\\\n",
     "                .option(\"inferSchema\",\"True\")\\\n",
-    "                    .load(path)"
+    "                    .load(path_windows)"
    ]
   },
   {
@@ -103,13 +96,6 @@
    "id": "d8fc49fe",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -386,17 +372,11 @@
    "execution_count": 15,
    "id": "2a407e53",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_select.write.mode(\"overwrite\").save(\"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/02.Bronze\")"
+    "path_linux_bronze = \"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/02.Bronze\"\n",
+    "path_windows_bronze = r\"D:\\PRJ_CNPJ\\new_data\\ETL\\02.Bronze\"\n",
+    "df_select.write.mode(\"overwrite\").save(path_windows_bronze)"
    ]
   },
   {
@@ -426,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
