--- a/01_extract_RAW.ipynb
+++ b/01_extract_RAW.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "09e3263b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,8 @@
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import *\n",
     "from pyspark.sql import functions as Func \n",
-    "from pyspark.sql.functions import *"
+    "from pyspark.sql.functions import *\n",
+    "from modules import my_func"
    ]
   },
   {
@@ -65,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "47e00fda",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Nesta pasta temos todos os arquivos brutos, da forma que vieram do site da RFB.\n",
     "path = \"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/01.RAW/*.csv\"\n",
-    "path_windows = r\"D:\\PRJ_CNPJ\\new_data\\ETL\\01.RAW\\*.csv\""
+    "\n"
    ]
   },
   {
@@ -87,7 +88,7 @@
     "        .option(\"enconding\",\"ISO-8859-1\")\\\n",
     "            .option(\"header\",\"False\")\\\n",
     "                .option(\"inferSchema\",\"True\")\\\n",
-    "                    .load(path_windows)"
+    "                    .load(path)"
    ]
   },
   {
@@ -374,9 +375,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_linux_bronze = \"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/02.Bronze\"\n",
-    "path_windows_bronze = r\"D:\\PRJ_CNPJ\\new_data\\ETL\\02.Bronze\"\n",
-    "df_select.write.mode(\"overwrite\").save(path_windows_bronze)"
+    "path_bronze = \"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/02.Bronze\"\n",
+    "df_select.write.mode(\"overwrite\").save(path_bronze)"
    ]
   },
   {
