comite nosso de cada dia

--- a/01_extract_RAW.ipynb
+++ b/01_extract_RAW.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "41cbed14",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "09e3263b",
    "metadata": {},
    "outputs": [],
@@ -30,8 +30,7 @@
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import *\n",
     "from pyspark.sql import functions as Func \n",
-    "from pyspark.sql.functions import *\n",
-    "from modules import my_func"
+    "from pyspark.sql.functions import *"
    ]
   },
   {
@@ -51,9 +50,9 @@
    "source": [
     "spark = SparkSession.builder.appName('extract_RAW')\\\n",
     "    .config('spark.master','local')\\\n",
-    "        .config('spark.executor.memory','2gb')\\\n",
-    "            .config('spark.shuffle.sql.partitions',2)\\\n",
-    "                .getOrCreate()"
+    "    .config('spark.executor.memory','2gb')\\\n",
+    "    .config('spark.shuffle.sql.partitions',2)\\\n",
+    "    .getOrCreate()"
    ]
   },
   {
@@ -66,44 +65,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "47e00fda",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Nesta pasta temos todos os arquivos brutos, da forma que vieram do site da RFB.\n",
-    "path = \"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/01.RAW/*.csv\"\n",
+    "path = \"/mnt/883849B43849A1D4/PRJ_CNPJ/new_data/ETL/01.RAW/ESTABELECIMENTOS/*.csv\"\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "47c41dc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "csv_to_DF = spark.read.format(\"csv\")\\\n",
     "    .option(\"delimiter\",\";\")\\\n",
-    "        .option(\"enconding\",\"ISO-8859-1\")\\\n",
-    "            .option(\"header\",\"False\")\\\n",
-    "                .option(\"inferSchema\",\"True\")\\\n",
-    "                    .load(path)"
+    "    .option(\"enconding\",\"ISO-8859-1\")\\\n",
+    "    .option(\"header\",\"False\")\\\n",
+    "    .option(\"inferSchema\",\"True\")\\\n",
+    "    .load(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "d8fc49fe",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "51091268"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,30 +129,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "d3634244",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "StructType(List(StructField(_c0,IntegerType,true),StructField(_c1,IntegerType,true),StructField(_c2,IntegerType,true),StructField(_c3,IntegerType,true),StructField(_c4,StringType,true),StructField(_c5,StringType,true),StructField(_c6,IntegerType,true),StructField(_c7,IntegerType,true),StructField(_c8,StringType,true),StructField(_c9,IntegerType,true),StructField(_c10,IntegerType,true),StructField(_c11,StringType,true),StructField(_c12,StringType,true),StructField(_c13,StringType,true),StructField(_c14,StringType,true),StructField(_c15,StringType,true),StructField(_c16,StringType,true),StructField(_c17,StringType,true),StructField(_c18,StringType,true),StructField(_c19,StringType,true),StructField(_c20,StringType,true),StructField(_c21,StringType,true),StructField(_c22,StringType,true),StructField(_c23,StringType,true),StructField(_c24,StringType,true),StructField(_c25,StringType,true),StructField(_c26,StringType,true),StructField(_c27,StringType,true),StructField(_c28,StringType,true),StructField(_c29,StringType,true)))"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- CNPJ_basico: integer (nullable = true)\n",
+      " |-- CNPJ_ordem: integer (nullable = true)\n",
+      " |-- CNPJ_dv: integer (nullable = true)\n",
+      " |-- id_matriz_filial: integer (nullable = true)\n",
+      " |-- nome_fantasia: string (nullable = true)\n",
+      " |-- sit_cad: string (nullable = true)\n",
+      " |-- dt_cad: integer (nullable = true)\n",
+      " |-- mt_sit_cad: integer (nullable = true)\n",
+      " |-- cid_ext: string (nullable = true)\n",
+      " |-- pais: integer (nullable = true)\n",
+      " |-- dt_inicio_at: integer (nullable = true)\n",
+      " |-- cnae_principal: string (nullable = true)\n",
+      " |-- cnae_secundario: string (nullable = true)\n",
+      " |-- tp_log: string (nullable = true)\n",
+      " |-- log: string (nullable = true)\n",
+      " |-- nm: string (nullable = true)\n",
+      " |-- comp: string (nullable = true)\n",
+      " |-- bairro: string (nullable = true)\n",
+      " |-- CEP: string (nullable = true)\n",
+      " |-- UF: string (nullable = true)\n",
+      " |-- municipio: string (nullable = true)\n",
+      " |-- ddd1: string (nullable = true)\n",
+      " |-- tel1: string (nullable = true)\n",
+      " |-- ddd2: string (nullable = true)\n",
+      " |-- tel2: string (nullable = true)\n",
+      " |-- ddd_fax: string (nullable = true)\n",
+      " |-- fax: string (nullable = true)\n",
+      " |-- email: string (nullable = true)\n",
+      " |-- sit_esp: string (nullable = true)\n",
+      " |-- dt_sit_esp: string (nullable = true)\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "# Deixamos que o Spark inferisse o Schema pois não vamos precisar de toda as colunas nos próximos passos.\n",
     "# Após a seleção das colunas que iremos realmente usar, faremos essa etapa do tratamento, formatando as colunas de datas, por exemplo.\n",
-    "csv_to_DF.schema"
+    "csv_to_DF.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "aadb05dd",
    "metadata": {},
    "outputs": [
@@ -177,7 +219,7 @@
        " '_c29']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "c41ef1cb",
    "metadata": {},
    "outputs": [],
@@ -236,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "b9154d13",
    "metadata": {},
    "outputs": [
@@ -275,7 +317,7 @@
        " 'dt_sit_esp']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "f722d05c",
    "metadata": {},
    "outputs": [],
@@ -313,28 +355,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "4e5b1a64",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StructType(List(StructField(CNPJ_basico,IntegerType,true),StructField(id_matriz_filial,IntegerType,true),StructField(nome_fantasia,StringType,true),StructField(sit_cad,StringType,true),StructField(dt_cad,IntegerType,true),StructField(mt_sit_cad,IntegerType,true),StructField(dt_inicio_at,IntegerType,true),StructField(cnae_principal,StringType,true),StructField(cnae_secundario,StringType,true),StructField(tp_log,StringType,true),StructField(log,StringType,true),StructField(nm,StringType,true),StructField(comp,StringType,true),StructField(bairro,StringType,true),StructField(CEP,StringType,true),StructField(UF,StringType,true),StructField(municipio,StringType,true)))"
+       "['CNPJ_basico',\n",
+       " 'id_matriz_filial',\n",
+       " 'nome_fantasia',\n",
+       " 'sit_cad',\n",
+       " 'dt_cad',\n",
+       " 'mt_sit_cad',\n",
+       " 'dt_inicio_at',\n",
+       " 'cnae_principal',\n",
+       " 'cnae_secundario',\n",
+       " 'tp_log',\n",
+       " 'log',\n",
+       " 'nm',\n",
+       " 'comp',\n",
+       " 'bairro',\n",
+       " 'CEP',\n",
+       " 'UF',\n",
+       " 'municipio']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_select.schema"
+    "df_select.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "95bcb823",
    "metadata": {},
    "outputs": [
@@ -370,18 +428,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "2a407e53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
-    "path_bronze = \"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/02.Bronze\"\n",
-    "df_select.write.mode(\"overwrite\").save(path_bronze)"
+    "path_bronze = \"/mnt/883849B43849A1D4/PRJ_CNPJ/new_data/ETL/02.Bronze/ESTABELECIMENTOS\"\n",
+    "df_select.repartition(1).write.mode(\"overwrite\").save(path_bronze)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "553b2028",
    "metadata": {},
    "outputs": [],
