--- a/02_transform_BRONZE.ipynb
+++ b/02_transform_BRONZE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,95 +21,135 @@
     "from pyspark.sql.types import *\n",
     "from pyspark.sql import functions as Func \n",
     "from pyspark.sql.functions import *\n",
-    "import modules \n",
-    "from modules import my_func"
+    "import modules\n",
+    "from modules.my_func import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "spark = SparkSession.builder.master(\"local\").\\\n",
     "    appName(\"CNPJ_bronze\").\\\n",
-    "        config(\"spark.executer.memory\",\"1gb\").\\\n",
-    "            getOrCreate()"
+    "    config(\"spark.executer.memory\",\"1gb\").\\\n",
+    "    getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/media/douglas/DATA/PRJ_CNPJ/new_data/ETL/02.Bronze/*.parquet\""
+    "path = \"/mnt/883849B43849A1D4/PRJ_CNPJ/new_data/ETL/02.Bronze/ESTABELECIMENTOS/estabelecimentos_full.parquet\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
-    "df = spark.read.format(\"parquet\")\\\n",
-    "    .option(\"delimiter\",\";\")\\\n",
-    "        .option(\"enconding\",\"ISO-8859-1\")\\\n",
-    "            .option(\"header\",\"False\")\\\n",
-    "                .option(\"inferSchema\",\"True\")\\\n",
-    "                    .load(path)"
+    "df = spark.read.load(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- CNPJ_basico: integer (nullable = true)\n",
+      " |-- id_matriz_filial: integer (nullable = true)\n",
+      " |-- nome_fantasia: string (nullable = true)\n",
+      " |-- sit_cad: string (nullable = true)\n",
+      " |-- dt_cad: integer (nullable = true)\n",
+      " |-- mt_sit_cad: integer (nullable = true)\n",
+      " |-- dt_inicio_at: integer (nullable = true)\n",
+      " |-- cnae_principal: string (nullable = true)\n",
+      " |-- cnae_secundario: string (nullable = true)\n",
+      " |-- tp_log: string (nullable = true)\n",
+      " |-- log: string (nullable = true)\n",
+      " |-- nm: string (nullable = true)\n",
+      " |-- comp: string (nullable = true)\n",
+      " |-- bairro: string (nullable = true)\n",
+      " |-- CEP: string (nullable = true)\n",
+      " |-- UF: string (nullable = true)\n",
+      " |-- municipio: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "df.schema"
+    "df.printSchema()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----------+----------------+--------------------+-------+--------+----------+------------+--------------+---------------+-------+--------------------+---+--------------------+----------------+--------+---+---------+\n",
+      "|CNPJ_basico|id_matriz_filial|       nome_fantasia|sit_cad|  dt_cad|mt_sit_cad|dt_inicio_at|cnae_principal|cnae_secundario| tp_log|                 log| nm|                comp|          bairro|     CEP| UF|municipio|\n",
+      "+-----------+----------------+--------------------+-------+--------+----------+------------+--------------+---------------+-------+--------------------+---+--------------------+----------------+--------+---+---------+\n",
+      "|   11124181|               1|        WOG MADEIRAS|     04|20181017|        63|    20090908|       4744002|        4671100|    RUA| 10 CHACARA 148 LOTE| 06|LOJA  01         ...|      TAGUATINGA|72110800| DF|     9701|\n",
+      "|   11124191|               1|            PRN RUAS|     04|20190328|        63|    20090909|       4930201|           null|AVENIDA|AVENIDA EUCLIDES ...| SN|  LOTE  34 QUADRA 34|   VILA SAO JOAO|25570162| RJ|     5901|\n",
+      "|    2180764|               2|                null|     08|20151208|         1|    20090909|       4784900|           null|    RUA|ROMARIO DE AZERED...| 50|       LOTE  18 QD H|    MANGUEIRINHA|28800000| RJ|     5885|\n",
+      "|   11124219|               1|   LAVA JATO ALIANCA|     08|20170511|         1|    20090908|       4520005|           null| QUADRA| SHCS SQ 107 BLOCO A|S/N|      PAG        ...|         ASA SUL|70346500| DF|     9701|\n",
+      "|   11124231|               1|VIVARTE EVENTOS E...|     04|20210226|        63|    20090903|       8230001|           null|    RUA|PROFESSOR ANIBAL ...| 64|                null|JARDIM SAO JORGE|04432060| SP|     7107|\n",
+      "+-----------+----------------+--------------------+-------+--------+----------+------------+--------------+---------------+-------+--------------------+---+--------------------+----------------+--------+---+---------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Usamos a função converterColuna para converter o tipo da coluna, no caso as datas estavam como strings pois foi inferido de forma automática\n",
-    "# Na variável colunas_time informamos quais serão as colunas que irão passam pela mudança de tipo\n",
-    "colunas_time = ['dt_cad','dt_inicio_at']\n",
-    "my_func.converterColuna(df,colunas_time,DateType())"
+    "df.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51091268"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Após as colunas de data receberem o tipo correto temos que formatar as datas. \n",
-    "df = df_select.withColumn(\"dt_sit_cad\", to_date(df_select.dt_cad,'yyyyMMdd'))\n",
-    "df = df.withColumn(\"dt_ini_atv\", to_date(df_select.dt_inicio_at,'yyyyMMdd'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exibindo as datas no formato antigo e no novo formato\n",
-    "df.select(['dt_cad','dt_sit_cad','dt_inicio_at','dt_ini_atv']).show(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Agora vamos dropar as  colunas antigas pois não precisamos mais delas\n",
-    "df = df.drop('dt_cad','dt_inicio_at')"
+    "df.count()"
    ]
   }
  ],
